--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .env
 
 /proj1/proj1b1/venv
-/proj1/proj1b1.baeden_page.file
+/proj1/proj1b1/baeden_page.file
 
 RAG/API Test/.env
 RAG/API Test/page.file
